testcode modify